# BazelTesting

./: .gitignore  LICENSE  README.md
bazel_testing/: BUILD.bazel  MODULE.bazel  test.json
bazel_testing/product/: main.cpp
bazel_testing/test/: BUILD.bazel  custom_mathTest.cpp
delete_dependency/: BUILD.bazel  MODULE.bazel  exclude.ld  main.cpp
delete_dependency/util/: BUILD.bazel  some_stuff.cpp  some_stuff.h
dependency_replacement/lib_a/: thing.h
dependency_replacement/lib_b/: BUILD.bazel  thing.h
dependency_replacement/product/: BUILD.bazel  main.cpp
deprecated_target/: BUILD.bazel  main.cpp
deprecated_target/math/: custom_math.cpp
deprecated_target/util/: BUILD.bazel  util.hpp
doxygen/: BUILD.bazel  MODULE.bazel  doxygen.bzl
doxygen/example/: BUILD.bazel
doxygen/example/program/: BUILD.bazel  main.cpp
doxygen/tools/: BUILD.bazel  doxygen.sh
missing_dependency/: BUILD.bazel  bazel-missing_dependency  main.cpp
missing_dependency/include/: abc.h
multiple_languages/: MODULE.bazel
multiple_languages/c/: BUILD.bazel
multiple_languages/c/include/: string_helper.h
multiple_languages/c/src/: string_helper.c
multiple_languages/c/test/: BUILD.bazel  main.c  test_c_program.py
multiple_languages/cpp/: BUILD.bazel
multiple_languages/cpp/include/: custom_math.h
multiple_languages/cpp/program/: main.cpp
multiple_languages/cpp/src/: custom_math.cpp
multiple_languages/cpp/test/: mathTest.cpp
multiple_languages/python/: BUILD.bazel
multiple_languages/python/src/: kode.py
multiple_languages/python/test/: testen.py
python_bazel/: BUILD.bazel  bazel-bin  bazel-out  bazel-python_bazel  bazel-testlogs
python_bazel/test/: testen.py
