load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("@stardoc//stardoc:stardoc.bzl", "stardoc")

cc_library(
    name = "math_lib",
    srcs = [
        "src/custom_math.cpp",
    ],
    hdrs = [
        "include/custom_math.h",
    ],
    include_prefix = "include",
    includes = [
        "include",
    ],
    visibility = ["//visibility:public"],
)

stardoc(
    name = "math_lib_documentation",
    input = "src/custom_math.cpp",
    out = "custom_math.md",
)


cc_test(
    name = "mathTest",
    deps = [
        ":math_lib",
        "@googletest//:gtest_main",
    ],
    srcs = [
        "test/mathTest.cpp"
    ],
)

cc_binary(
    name = "program",
    deps = [
        ":math_lib",
    ],
    srcs = [
        "program/main.cpp",
    ],  
)